Removed aspect ratio as it was causing bug on mobile

--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -31,7 +31,7 @@ main
   gap: 30px
   align-items: center
   max-width: 100%
-  aspect-ratio: 1
+  // aspect-ratio: 1
   padding: 60px
   border-radius: 10px
   background: $gray
@@ -89,15 +89,15 @@ main
 
 @media screen and (max-width: 475px)
   main
-    padding: 40px 20px
+    padding: 40px 25px
 
   .instructions
-    max-width: 80%
+    max-width: 286px
 
   .dice-container
-    grid-gap: 12px
+    grid-gap: 9px
 
   .die
-    width: 40px
-    font-size: 1.5em
+    // width: 40px
+    // font-size: 1.5em
     
